--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,12 @@
     <div id="map">
         <img id="image" src="static/img/map.gif">
     </div>
+
+    <div id="radiobutton">
+
+        <input type="radio" name="london" value="selected">London
+    </div>
+
     <div  id="outer" class="container-fluid">
         <div class="row">
            <div class="col-sm-8">
@@ -38,6 +44,21 @@
                        </div>
                    </div>
                    <!-- Time Chart -->
+
+
+                   <!-- funding Pie -->
+                  <div class="col-sm-6">
+                    <div class="chart-wrapper">
+                      <div class="chart-title">
+                        Funding Status
+                      </div>
+                      <div class="chart-stage">
+                        <div id="funding-chart"></div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- funding Pie -->
+
                </div>
             </div>
         </div>
@@ -55,5 +76,6 @@
 <script src="{{ url_for ('static', filename='lib/js/keen.min.js')}}"></script>
 <script src="{{ url_for ('static', filename='js/graph.js')}}"></script>
 <script src="{{ url_for ('static', filename='lib/js/intro.js')}}"></script> <!-- code for initializing our tool tips and their interactive features -->
+<script src="{{ url_for ('static', filename='js/myfilterfunction.js')}}"></script>
 </body>
 </html>
